--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#0C90F1</color>
-    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimaryDark">#0591F8</color>
     <color name="colorAccent">#0C90F1</color>
 
     <color name="primary_text_color">#363A43</color>
@@ -11,4 +11,9 @@
 
     <color name="divider_color">#EAEAEA</color>
 
+    <!--TODO (Step 3: All the color values are added here.)-->
+    <!--START-->
+    <color name="task_list_action_color">#F7F6FA</color>
+    <color name="task_list_title_view_bg_color">#F8F8F8</color>
+    <!--END-->
 </resources>
